--- a/conf/swe.yaml
+++ b/conf/swe.yaml
@@ -1,5 +1,6 @@
 defaults:
     - base
+    - _self_
 finetune:
     seq_length: 4000
     gradient_accumulation_passes: 1024
@@ -22,7 +23,14 @@ train_dataset_names:
     - swegym
 test_dataset_names:
     - swegym
-preprocessor_args:
+swe_preprocessor_args:
   dataset_path: /mnt/llmd/data/swegym/ds
   repo_path: /mnt/llmd/data/swegym/repos
+  min_token_threshold: 10
+  max_token_threshold: 10000
+  num_map_processes: 4
+  tokenizer_model: Qwen/Qwen2.5-Coder-7B-Instruct
+  force_reprocess: false
+  hf_dataset_name: SWE-Gym/SWE-Gym
+  hf_split_name: train
 model_path: Qwen/Qwen2.5-Coder-7B-Instruct
