--- a/conf/localization.yaml
+++ b/conf/localization.yaml
@@ -22,11 +22,11 @@ test_dataset_names:
 
 # Localization-specific settings
 agent:
-  max_prompt_length: 8000
+  max_prompt_length: 12000
 
 # Finetune settings optimized for localization
 finetune:
-  seq_length: 4000  # Shorter sequences for query generation
+  seq_length: 14000  # Shorter sequences for query generation
   gradient_accumulation_passes: 512  # Adjust based on your setup
   learning_rate: 5e-6  # Slightly higher for localization learning
   rl:
@@ -51,9 +51,7 @@ test_llm:
 environment: null
 
 # SWE-specific dataset parameters
-train_dataset_params:
-  dataset_path: /mnt/llmd/data/swegym/ds
-test_dataset_params:
+dataset_loader_params:
   dataset_path: /mnt/llmd/data/swegym/ds
 
 # Model path - use a coding-focused model if available
