--- a/conf/swe.yaml
+++ b/conf/swe.yaml
@@ -1,5 +1,6 @@
 defaults:
   - base
+  - finetune: actor_critic
   - _self_
 
 # Override the rollout policy for localization
@@ -29,13 +30,9 @@ repair_agent:
 
 # Finetune settings optimized for localization
 finetune:
-  seq_length: 50000  # Shorter sequences for query generation
+  seq_length: 48000  # Shorter sequences for query generation
   gradient_accumulation_passes: 512  # Adjust based on your setup
   rl:
-    algo: reinforce  # Simple REINFORCE for localization
-    use_advantages: true
-    kl_coef: 0.0
-    entropy_bonus: 0.0
     temperature: ${...llm.parameters.temperature}
 
 # LLM settings for localization
@@ -69,3 +66,14 @@ swe:
   enable_repair: true
   repo_path_train: /mnt/llmd/data/swegym/repos
   repo_path_test: /mnt/llmd/data/swebench_lite/repos
+
+swe_preprocessor_args:
+  repo_path: /mnt/llmd/data/swegym/repos
+  dataset_path: /mnt/llmd/data/swegym/ds
+  min_token_threshold: 10
+  max_token_threshold: 5000
+  num_map_processes: 32
+  tokenizer_model: Qwen/Qwen2.5-Coder-7B-Instruct
+  force_reprocess: false
+  hf_dataset_name: SWE-Gym/SWE-Gym
+  hf_split_name: train
