lets try just repair

--- a/conf/swe.yaml
+++ b/conf/swe.yaml
@@ -61,8 +61,8 @@ model_path: Qwen/Qwen2.5-Coder-7B-Instruct
 eval_every_n_versions: 1000
 
 swe:
-  enable_localization: true
-  enable_file_selection: true
+  enable_localization: false
+  enable_file_selection: false
   enable_repair: true
   repo_path_train: /mnt/llmd/data/swegym/repos
   repo_path_test: /mnt/llmd/data/swebench_lite/repos
