fixed dependency sitch. added a note

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,12 @@ authors = [
 ]
 dependencies = [
     "torch>=2.6",
-    "vllm==0.8.3",
+    # "vllm==0.8.3",
     "accelerate==1.7.0",
     "Tapeagents[finetune]==0.1.15",
-    "transformers==4.51.0",
-    "flash-attn==2.7.4.post1",
-    "ring-flash-attn==0.1.6",
+    # "transformers==4.51.0",
+    # "flash-attn==2.7.4.post1",
+    # "ring-flash-attn==0.1.6",
     "math-verify[antlr4_9_3]==0.7.0",
     "orjson==3.10.16",
     "redis==5.2.1",
