first attempt at regression on expert reward

--- a/conf/finetune/base.yaml
+++ b/conf/finetune/base.yaml
@@ -103,3 +103,4 @@ rl:
   temperature: ${...llm.parameters.temperature}
   aggregate_loss: sum
   overlong_filtering: false
+  expert_value_loss_coef: 0.0
