--- a/conf/finetune/ppo.yaml
+++ b/conf/finetune/ppo.yaml
@@ -6,3 +6,4 @@ model_class: causal-language-modeling-with-value-head
 rl:
   value_loss_coef: 0.1
   policy_loss: ppo
+  expert_value_loss_coef: 0.1
